Upgrade SDK to Corretto 19 -> Upgrade ErrorProne to 2.15.0 -> Upgrade EqualsVerifier to 3.11 -> Upgrade jacoco to 0.8.8 -> Upgrade JsonFlattener to 1.14.2 -> Upgrade Guava to 31.1-jre -> Upgrade RE2J to 1.7 -> Upgrade Jackson to 2.14.0 -> Upgrade SLF4J to 2.0.3 -> Fix Optional serialization issue in class Stack